--- a/3_Drug_Association_Analysis.qmd
+++ b/3_Drug_Association_Analysis.qmd
@@ -55,6 +55,9 @@ sort_voom_CCLE <- readRDS("data/sort_voom_CCLE.rds")
 # Tool for converting gene names without calling AnnotationDbi::select() every time.
 gene_tool <- readRDS("data/gene_tool.rds")
 
+# Top table from differential expression analysis.
+top_table <- readRDS("1_output/top_table.rds")
+
 # enriched Reactome pathways from gene set enrichment analysis.
 enriched_pathways <- readRDS("2_output/enriched_pathways.rds") # not sure if we need this.
 
@@ -179,7 +182,7 @@ drug_metagene_correlation <- cor(t(subset_pathway_matrix_y), t(subset_drug_respo
 # Save the correlations in csv format.
 write.csv(drug_metagene_correlation, file = "3_output/drug_metagene_correlation.csv", sep = ",",
           row.names = T, col.names = T)
-
+# Do we need to set sep or col.names?
 # Tidy up the environment.
 rm(list = c("subset_drug_response", "subset_pathway_matrix_y"))
 ```
@@ -194,16 +197,72 @@ for(i in seq(0.1, 1.0, by = 0.1)){
 # Determine the correlation threshold.
 cor_thresh <- 0.4
 
-# Which drugs satisfy this threshold with at least one pathway?
-correlated_pathways <- rowSums(abs(drug_metagene_correlation) > cor_thresh) %>% .[. > 0] %>% sort(., decreasing = T)
+# Which drugs correlate to each pathway?
+# Add the number of correlated drugs as a column.
+correlated_pathways <- rowSums(abs(drug_metagene_correlation) > cor_thresh) %>% .[. > 0] %>% sort(., decreasing = T)  %>% as.data.frame()
+colnames(correlated_pathways) <- "Drug Count"
+# Add pathway names as a column.
+correlated_pathways <- correlated_pathways %>%
+  rownames_to_column(var = "Pathway")
+# Add names of correlated drugs as a column.
+correlated_pathways$Drug <- sapply(
+  correlated_pathways$Pathway,
+  function(pathway) {
+    drugs <- names(which(abs(drug_metagene_correlation[pathway, ]) > cor_thresh))
+    paste(drugs, collapse = ", ")
+  }
+)
 correlated_pathways
 
-correlated_drugs <- colSums(abs(drug_metagene_correlation) > cor_thresh) %>% .[. > 0] %>% sort(., decreasing = T)
+# Which pathways correlate to each drug?
+# Add the number of correlated pathways as a column.
+correlated_drugs <- colSums(abs(drug_metagene_correlation) > cor_thresh) %>% .[. > 0] %>% sort(., decreasing = T) %>% as.data.frame()
+colnames(correlated_drugs) <- "Pathway Count"
+# Add drug names as a column.
+correlated_drugs <- correlated_drugs %>%
+  rownames_to_column(var = "Drug")
+# Add names of correlated pathways as a column.
+correlated_drugs$Pathway <- sapply(
+  correlated_drugs$Drug,
+  function(drug) {
+    pathways <- names(which(abs(drug_metagene_correlation[, drug]) > cor_thresh))
+    paste(pathways, collapse = ", ")
+  }
+)
 correlated_drugs
 
 # Create a matrix where all correlations < cor_thresh (moderate) are replaced with NAs, for visualization. 
 moderate_drug_metagene_correlation <- drug_metagene_correlation
 moderate_drug_metagene_correlation[abs(moderate_drug_metagene_correlation) < cor_thresh] <- NA
+
+# Tidy up the environment
+rm(list = c("pathways", "drugs", "cor_thresh"))
+```
+
+### Output a summary document
+```{r}
+# Create summary object
+summary <- list()
+summary$sort_dasatinib_GDSC2 <- sort_dasatinib_GDSC2
+summary$top_table <- top_table %>% rownames_to_column(var = "Ensembl ID")
+summary$parent_enriched_pathways <- parent_enriched_pathways
+summary$drug_metagene_correlation <- drug_metagene_correlation %>% as.data.frame() %>% rownames_to_column(var = "Pathway")
+summary$correlated_drugs <- correlated_drugs
+summary$correlated_pathways <- correlated_pathways
+
+# Create workbook
+library(openxlsx)
+wb <- createWorkbook()
+for (name in names(summary)) {
+  addWorksheet(wb, name)
+  writeData(wb, sheet = name, summary[[name]])
+}
+
+# Save the workbook
+saveWorkbook(wb, file = "3_output/summary.xlsx", overwrite = TRUE)
+
+# Tidy up the environment
+rm(list = c("correlated_drugs", "correlated_pathways", "i", "wb", "name"))
 ```
 
 ### Tidy up the environment and R memory
